chore: regenerate API clients with latest swagger
